parser/src/snapshots/clippings_parser__test__parse_single_article_clip.snap
---
source: parser/src/lib.rs
expression: res
---
Ok(
    (
        "",
        Clipping {
            book: Book {
                title: "crofflr 2015-08-07",
                author: Some(
                    "crofflr.com",
                ),
            },
            content: ArticleClip(
                ClippingArticleClip {
                    location: Location {
                        from: 228,
                        to: None,
                        kind: Location,
                    },
                    text: "Yada yada ya",
                },
            ),
        },
    ),
)
