parser/src/snapshots/clippings_parser__test__parse_single_clipping.snap
---
source: parser/src/main.rs
expression: res
---
Ok(
    (
        "",
        Clipping {
            title: "Flow",
            author: Some(
                "Mihaly Csikszentmihalyi",
            ),
            content: Highlight(
                ClippingHighlight {
                    location: Location {
                        from: 1213,
                        to: Some(
                            1214,
                        ),
                        kind: Location,
                    },
                    text: "The reason it is possible to achieve such complete involvement in a flow experience is that goals are usually clear, and feedback immediate.",
                },
            ),
        },
    ),
)
