parser/src/snapshots/clippings_parser__test__parse_single_note.snap
---
source: parser/src/main.rs
expression: res
---
Ok(
    (
        "",
        Clipping {
            title: "Flow",
            author: Some(
                "Mihaly Csikszentmihalyi",
            ),
            content: Note(
                ClippingNote {
                    location: Location {
                        from: 1213,
                        to: None,
                        kind: Location,
                    },
                    text: "Yada yada ya.",
                },
            ),
        },
    ),
)
